<resources>
    <string name="app_name">Nimble</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>


    <!-- Login Screen -->
    <string name="loguin">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot?</string>

    <!-- Survey Presentation Screen -->
    <string name="dayMonthText">Monday, June 15</string>
    <string name="todayText">Today</string>
    <string name="titleText">Working from home Check-in</string>
    <string name="subtitleText">We would like to know how you feel about our work from home...</string>

    <!-- Survey Beginning Screen -->
    <string name="button_text">Start Survey</string>
    <string name="subtitle_text">We would like to know how you feel about our work from home (WFH) experience.</string>
    <string name="title_text">Working from home Check-In</string>

</resources>