<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment"
    android:background="@color/background_grey">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo_white"
        app:layout_constraintBottom_toTopOf="@+id/emailInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_hint_text_input"
        android:layout_marginHorizontal="@dimen/margin_horizontal_text_input"
        android:layout_marginVertical="@dimen/margin_vertical_text_input"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/amiko"
        android:paddingHorizontal="@dimen/padding_text_input"
        android:hint="@string/email"
        android:textSize="@dimen/height_hint_text"
        app:layout_constraintBottom_toTopOf="@id/passInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/passInput"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_hint_text_input"
        android:layout_marginHorizontal="@dimen/margin_horizontal_text_input"
        android:layout_marginVertical="@dimen/margin_vertical_text_input"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/amiko"
        android:paddingHorizontal="@dimen/padding_text_input"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="@dimen/height_hint_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_horizontal_text_input"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/amiko"
        android:text="@string/forgot"
        android:textColor="@color/middle_grey"
        app:layout_constraintBottom_toBottomOf="@+id/passInput"
        app:layout_constraintEnd_toEndOf="@+id/passInput"
        app:layout_constraintTop_toTopOf="@+id/passInput" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLogIn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_hint_text_input"
        android:layout_marginHorizontal="@dimen/margin_horizontal_text_input"
        android:layout_marginVertical="@dimen/margin_vertical_text_input"
        android:background="@drawable/login_background"
        android:fontFamily="@font/amiko"
        android:text="@string/loguin"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passInput"
        />

</androidx.constraintlayout.widget.ConstraintLayout>